assets/styles/landing.css
.color-blue { color: #4abae6; }
.color-green, h3 { color: #56be53; }
.color-yellow, .install { color: #f8f062; }
.color-orange { color: #e15914; }
.color-red { color: #d62746; }

body, input {
  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
}

body {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-size: 20px;
  line-height: 2rem;
  font-weight: normal;
  color: #eee;
  overflow-x: hidden;
  position: relative;
}

body::after {
  content: '';
  background-image: url(/assets/images/grid.png);
  opacity: 0.4;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;
}

body, #hero-bg, .header, .footer, #step-1 {
  background-color: #1d2a35;
}

.highlight {
  background: #162632;
}

#hero-bg {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 820px;
  z-index: 0;
}

.spiro {
  pointer-events: none;
  content: ' ';
  position: absolute;
  display: block;
  width: 3200px;
  height: 2800px;
  top: 0;
  right: 0;
  opacity: .05;
  background: url(/assets/images/spiro.svg) no-repeat;
  background-size: 100% 100%;
  background-position: 1400px -1800px;
  -webkit-transform: translateZ(0px);
  transform: translateZ(0px);
}

#step-1 {
  padding-top: 5rem;
  padding-bottom: 5rem;
  position: relative;
  color: #fff;

  background-image: linear-gradient(-45deg, #061a16, #283149);
}

.row {
  max-width: 1300px;
  margin: 0 auto;
  padding: 0 2rem;
  position: relative;
}

.section {
  padding-top: 7rem;
  padding-bottom: 7rem;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.section > .row {
  margin: auto;
}

.has-title {
  padding-top: 10rem;
}

h2 {
  font-weight: normal;
  margin: 0 0 2rem;
}

.section-title {
  position: absolute;
  top: -5rem;
  left: 2rem;
  padding: .75rem 1rem;
}

.highlight {
  color: #fff;
  position: relative;
  box-shadow: 0 0 120px rgba(0,0,0,0.15);
}

.highlight h4 {
  opacity: 1;
  color: #fff;
}

.highlight::before {
  content: ' ';
  display: block;
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: url(/assets/images/lines.svg);
  opacity: .02;
  transform: translateZ(0);
  -webkit-transform: translateZ(0);
}

#logo {
  display: block;
  margin: 1rem 0 1.5rem;
  padding: 1rem 0;
  width: 155px;
  height: 60px;
}

#logo a {
  margin: 0;
  display: block;
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
  width: 100%;
  height: 100%;
  background: url(/assets/images/logo6.png) no-repeat top left;
  background-size: 155px 60px;
}

.nav-container nav {
  opacity: 0.5;
  transition: opacity 300ms ease-in;
  padding: 0;
  font-weight: bold;
  margin-right: 0;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  max-width: 330px;
  -ms-flex-item-align: end;
  -webkit-align-self: flex-end;
  align-self: flex-end;
}

.nav-container nav:hover {
  opacity: 1;
}

.nav-container a {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: auto 0;
  font-size: 16px;
  padding: .4rem 1.5rem;
  color: #20201d;
  text-align: center;
}

.hero {
  padding: 0;
  border: none;
}

.hero-second {
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
}

.hero h2 {
  font-size: 2.9rem;
  margin: 0 0 1rem 0;
  font-weight: normal;
  opacity: 1;
}

.hero p {
  font-size: 1.6rem;
  line-height: 1.7em;
  margin-bottom: 2.5rem;
  padding-right: 2rem;
  opacity: 0.8;
  color: #fff;
}

.hero p span {
  font-size: 16px;
  color: yellow;
  line-height: 1.2rem;
}

.hero .signup-text {
  font-size: 1.3rem;
  opacity: 0.75;
  margin-bottom: 1rem;
}

.hero-second, .hero-first {
  position: relative;
  padding: 0;
  z-index: 3;
}

.phone {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin: 0 auto 0 1rem;
  box-shadow: 0 0 50px rgba(0,0,0,0.5);
  z-index: 0;
}

.phone.two, .phone.three {
  margin-left: -520px;
}

.phone.two {
  z-index: 2;
  margin-top: 20px;
  -webkit-transform: scale(0.9);
  transform: scale(0.9);
  opacity: 0.8;
}

.phone.three {
  z-index: 1;
  margin-top: 40px;
  -webkit-transform: scale(0.8);
  transform: scale(0.8);
  opacity: 0.6;
}

.screen {
  margin: auto;
  overflow: hidden;
  background: #fff;
  height: 625px;
  width: 355px;
  border: none;
  background: #eee;
}

.signup {
  display: none;
}

.signup input {
  min-width: 180px;
  font-size: 20px;
  padding: .5rem;
  border: 1px solid #ccc;
  opacity: 0.7;
  transition: opacity 300ms ease-in;
}

.signup input:focus {
  opacity: 1;
}

.signup button {
  min-width: 100px;
  background: rgba(0,0,0,0.4);
  border: none;
  color: #fff;
  margin: 1px 0;
  font-size: 1rem;
  border-radius: 5px;
  padding: 0 1rem;
  height: 2.8rem;
}

#email {
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-right: 10px;
}

.row .row {
  width: 100%;
  padding: 0;
  margin: 0;
}

.widget {
  margin: .1rem 0 -.1rem;
  height: 1.5rem;
  width: 1.5rem;
}

.justify-right {
  -webkit-justify-content: right;
  -ms-flex-pack: right;
  justify-content: right;
}

.buttons {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  margin: 0 0 1rem 0;
  transition: all 300ms ease-in;
}

.buttons .button.prefer {
  opacity: 1;
  color: #fff;
}

.buttons a {
  opacity: 0.5;
}

.buttons a:hover {
  opacity: 1;
}

.buttons .button {
  margin: 0 0 0 1rem;
  border-color: #fff;
  color: #fff;
}

.buttons .button:first-child {
  margin: 0;
}

.info {
  display: none;
  background: #000;
  color: #fff;
  font-weight: bold;
  padding: 5px 6px;
  border-radius: 2px;
  position: absolute;
  font-size: .7rem;
  line-height: .7rem;
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  z-index: 100;
}

.info-one {
  top: 100px;
  right: 200px;
}

.info-two {
  top: 160px;
  right: 150px;
}

.info-three {
  top: 200px;
  right: 50px;
}

blockquote {
  font-size: 1.6rem;
  line-height: 2.4rem;
  text-align: center;
  opacity: 0.8;
  font-style: italic;
  padding: 3rem;
  margin: 0;
}

blockquote::before {
  content: '“ ';
}

blockquote::after {
  content: '”';
  display: block;
  text-align: right;
}

blockquote::before,
blockquote::after {
  font-size: 4rem;
  opacity: 0.3;
  padding: 1rem;
  line-height: 0.5rem;
}

blockquote footer {
  font-size: 1rem;
  font-weight: bold;
  font-style: normal;
  text-align: right;
  display: block;
  padding: 0 3rem 0 0;
  margin: 0 0 -4rem 0;
}

.install {
  padding: 1.5rem 0;
  font-family: "Source Code Pro", Monaco, Menlo, Consolas, monospace;
}

.install {
  font-size: 22px;
  line-height: 2.5rem;
  font-weight: bold;
}

.install .extra-line {
  color: #fff;
  font-weight: normal;
  font-size: 18px;
  opacity: 0;
  transition: all 100ms ease-in;
  opacity: 0.4;
}

.body {
  color: #111;
  padding-top: 2rem;
  padding-bottom: 2rem;
  z-index: 2;
}

.body .row {
  margin: 0 0 2rem 0;
}

.body div {
  position: relative;
  z-index: 2;
}

pre {
  font-size: 1rem;
  line-height: 1.5rem;
}

pre code {
  padding: 0;
}

code.emphasize {
  font-size: 16px;
}

.features {
  margin-top: -1.5rem;
}

.feature {
  padding: 1.5rem 2rem;
  text-align: center;
}

.feature h4 {
  font-weight: bold;
}

.feature a {
  padding: .5rem;
  border-radius: 3px;
  transition: all .2s ease-in;
}

.feature a:hover {
  background: rgba(255,255,255,0.1);
}

.feature p {
  opacity: 0.8;
  margin-bottom: 0;
}

.pad-right, .pad {
  padding-right: 2rem;
}

.pad-left, .pad {
  padding-left: 2rem;
}

.pad-top {
  padding-top: 2rem;
}

h4 {
  font-size: 20px;
  font-weight: normal;
  margin: 1rem 0;
}

.emphasize {
  font-size: 120%;
  line-height: 2.7rem;
}

.lighten, .lighten p {
  color: rgba(255,255,255,0.6);
}

.footer {
  position: relative;
  color: #fff;
  text-align: center;
  overflow: hidden;
  min-height: 400px !important;
}

.footer a {
  color: #fff;
}

.footer .row {
  padding-top: 1rem;
  padding-bottom: 8rem;
}

.footer nav a {
  display: block;
}

.footer span {
  font-size: 80%;
  opacity: 0.5;
}

.gray {
  transition: all 200ms ease-in;
  opacity: 0.3;
  filter: grayscale(100%);
  -webkit-filter: grayscale(100%);
}

.gray:hover {
  opacity: 1;
  filter: grayscale(0%);
  -webkit-filter: grayscale(0%);
}

.content-nav {
  margin: 0;
  padding: 0;
  text-align: left;
}

.content-nav li {
  list-style: none;
  margin: 0;
  padding: 0;
}

.content-nav li strong {
  line-height: 2rem;
}

.content-nav li ul li {
  font-size: 1rem;
  line-height: 1.3rem;
}

.connect {
  position: absolute;
  bottom: 0;
  left: 410px;
  opacity: 0.5;
  transition: opacity 300ms ease-in;
}

.connect:hover {
  opacity: 1;
}

.icon-mini {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: .5rem 0;
  width: 36px;
  height: 32px;
  text-indent: 100%;
  overflow: hidden;
  background-size: cover;
  background-blend-mode: multiply;
  background-color:
}

.twitter {
  background-image: url(/assets/images/twit.svg);
  margin-left: 1rem;
}

.github {
  background-image: url(/assets/images/github.svg);
  margin-left: 1.5rem;
}

.warn {
  background: #fff;
  color: black;
  padding: .2rem;
  text-align: center;
  position: relative;
  z-index: 10;
}

.intro {
  padding-left: 1rem;
}

.row.lifted {
  margin-top: -2rem;
}

.tryit {
  width: 134px;
  height: 88px;
  background: url(/assets/images/tryit.png) no-repeat;
  background-size: 134px 84px;
  text-indent: 100%;
  white-space: nowrap;
  position: absolute;
  top: 40px;
  left: 400px;
  overflow: hidden;
  -webkit-transform: rotateZ(10deg);
  transform: rotateZ(10deg);
}

.toggle {
  position: absolute;
  top: 180px;
  left: 370px;
  z-index: 10;
}

.toggle button {
  background: rgba(0,0,0,0.2);
  color: rgba(255,255,255,0.5);
  padding: 1rem 2rem;
  border: none;
  display: block;
  width: 100%;
  font-size: 18px;
  margin-bottom: 1px;
}

.toggle button:focus {
  color: white;
}

.icon {
  width: 100px;
  height: 100px;
  opacity: 0.2;
  margin: auto;
  margin-bottom: 15px;
  filter: grayscale(100%);
  -webkit-filter: grayscale(100%);
  transition: all 300ms ease-in;
}

.icon.logo {
  width: 110px;
  height: 110px;
}

.section:hover .icon {
  opacity: 1;
  filter: none;
  -webkit-filter: none;
}

@media only screen and (min-width: 48em) {
  .intro {
    padding-right: 6rem;
  }

  .hero-first {
    padding-right: 3rem;
  }
}

@media only screen and (max-width: 62em) {
  .buttons, #logo {
    margin-left: auto;
    margin-right: auto;
  }
}

.center-titles h4 {
  text-align: center;
}

.note {
  text-align: center;
  padding: 1rem 0;
  z-index: 10;
  position: relative;
}

.note strong {
  color: #fff;
}

.note .row {
  padding: 0 4rem;
}

.note a {
  font-weight: bold;
}

.note p {
  color: rgba(255,255,255,0.6);
  margin: 0;
}


/* header */
.header {
  padding: 1rem 0;
  margin: 0 0 2rem 0;
  background: rgba(0,0,0,0.1);
  overflow: hidden;
}

.header #logo {
  margin-top: 0;
  margin-bottom: -12px;
}

.nav {
  margin: auto;
  margin-left: 1rem;
}

.nav a {
  padding: 0 2rem;
}

#nav li {
  list-style: none;
  font-size: 1.2rem;
  line-height: 1.8rem;
}

#nav .H2 {
  font-weight: bold;
}

#nav .H3 {
  margin-left: 15px;
}

#nav.fixed {
  position: fixed;
  top: 20px;
  bottom: 0;
  overflow-y: scroll;
}

.row > .button {
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

